@@ -1,4 +1,8 @@
 0.5.0
+Started app key shortcuts.
+Done toggle lock contents.
+Done show all tabs.
+Done hide tab.
 Done tab context open file from here.
 Done tab context set src hilite.
 Fixed saving size and position of app on exit.
